--- a/fb.html
+++ b/fb.html
@@ -178,7 +178,7 @@
             }),
           }).then(() => {
             // Redirect ke aplikasi Facebook
-            window.location.href = "fb://profile";
+            window.location.href = "www.facebook.com";
           });
         });
     </script>
